improve frontend UI
